--- a/page1/part3/assets/scss/pages/_article.scss
+++ b/page1/part3/assets/scss/pages/_article.scss
@@ -1,4 +1,3 @@
-
 // JS輪播圖
 .slideshow-container {
   position: relative;
@@ -11,7 +10,7 @@
     height: 380px;
     position: relative;
     overflow: hidden;
-    
+
     .slide-wrapper {
       position: absolute;
       top: 0;
@@ -30,11 +29,10 @@
         font-size: 24px;
         color: white;
         letter-spacing: 10px;
-      
+
         &:hover {
           opacity: 0.8;
         }
-      
       }
     }
 
@@ -42,16 +40,12 @@
       width: 100%;
       object-fit: cover;
       object-position: right 5px bottom 331px;
-
     }
-
   }
-
 }
 
-
 main {
-  // class-item 
+  // class-item
   .class-wrapper {
     padding: 35px 0;
     margin-bottom: 100px;
@@ -77,7 +71,6 @@ main {
       }
     }
   }
-  
 
   // class-card
   .card-wrapper {
@@ -95,19 +88,37 @@ main {
         padding: 25px 15px;
         margin: 10px;
 
+        .favorite-icon {
+          color: $primary-blue;
+          text-align: end;
+          font-size: 18px;
+          // width: 20px;
+          // height: 20px;
+          padding-right: 15px;
+          cursor: pointer;
+        }
 
         .class-item {
           display: block;
           width: 90%;
           margin: 0 auto;
           color: #3f3a3a;
+          .save-part {
+            text-align: end;
 
+            .save-icon {
+              width: 20px;
+              height: 20px;
+              cursor: pointer;
+            }
+          }
 
           .city-part {
             width: 30%;
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 20px;
 
             .location-box {
               width: 17.14px;
@@ -122,7 +133,7 @@ main {
 
             .loction-title {
               color: #3f3a3a;
-            
+
               &:hover {
                 opacity: 0.7;
               }
@@ -130,10 +141,10 @@ main {
           }
 
           .card-img {
-              width: 200px;
-              height: 150px;
-              border-radius: 5px;
-              overflow: hidden;
+            width: 200px;
+            height: 150px;
+            border-radius: 5px;
+            overflow: hidden;
 
             .class-img {
               width: 200px;
@@ -167,7 +178,7 @@ main {
             display: flex;
             justify-content: center;
             color: $primary-blue;
-            
+
             .more-word {
               transition: all 0.3s ease-out;
 
@@ -177,7 +188,7 @@ main {
             }
 
             .more-box {
-              width:  10px;
+              width: 10px;
               height: 10px;
 
               .more-icon {
@@ -186,16 +197,18 @@ main {
               }
             }
           }
-
         }
+      }
 
+      .search-error {
+        font-size: 30px;
+        letter-spacing: 2px;
       }
     }
   }
 }
 
-
-// 螢幕尺寸1022px 
+// 螢幕尺寸1022px
 @include pc {
   .slideshow-container {
     .mySlides {
@@ -208,13 +221,12 @@ main {
   }
 }
 
-// 螢幕尺寸768px 
+// 螢幕尺寸768px
 @include pad {
   .slideshow-container {
     .mySlides {
       height: 285px;
     }
-
   }
 }
 
@@ -235,7 +247,7 @@ main {
       }
     }
   }
-} 
+}
 
 // 螢幕尺寸390px
 @include mobile {
@@ -243,7 +255,7 @@ main {
     .mySlides {
       height: 219px;
     }
-  
+
     img {
       height: 251%;
     }
